[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "support-ticket-triage-env"
version = "1.0.0"
description = "Real-world support ticket triage agent environment for OpenEnv hackathon"
authors = [{name = "Guthikonda Naveen", email = "guthikondanaveen9@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "requests>=2.28.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.main:app"

[tool.openenv]
env_class = "server.environment:SupportTicketEnvironment"
env_id = "support-ticket-triage-env"
version = "1.0.0"

[tool.hatch.build.targets.wheel]
packages = ["server"]
