[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support-ticket-triage-env"
version = "1.0.0"
description = "Real-world AI Support Ticket Triage agent environment for OpenEnv"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.1",
    "openai>=2.7.2",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "openenv-core[core]>=0.2.2"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server"]
