[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "support-ticket-triage-env"
version = "1.0.0"
description = "Real-world AI Support Ticket Triage agent environment for OpenEnv hackathon"
authors = [{name = "Guthikonda Naveen", email = "guthikondanaveen9@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "requests>=2.28.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
env_class = "server.environment:SupportTicketTriageEnvironment"
env_id = "support-ticket-triage-env"
version = "1.0.0"

[tool.hatch.build.targets.wheel]
packages = ["server"]
